--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     min-height: 100vh;
     margin: 0;
     padding: 0;
     font-family: "Lato", sans-serif;
+    background-color: blanchedalmond;
 }
 
 *{
@@ -16,4 +20,22 @@ body{
 }
 
 .footer {
+    
+}
+
+.container{
+    min-width: 1440px;
+    margin: 0 auto;
+    border: 1px solid black;
+}
+
+.nav-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-item{
+    width: 150px;
 }
